# MPI-Parser

./: CMakeLists.txt  README.md  main-mpi.cpp  main-seq.cpp  mpi-parser
